force-app/main/default/objects/mkto_si__MarketoSettings__c/mkto_si__MarketoSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Marketo 設定</label>
</CustomObject>