force-app/main/default/objects/mkto_si__MarketoSettings__c/fields/mkto_si__BatchSize__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__BatchSize__c</fullName>
    <description>Number of rows per page on dashboard.</description>
    <label>Batch Size</label>
    <length>3</length>
    <type>Text</type>
</CustomField>