force-app/main/default/objects/mkto_si__MarketoSettings__c/fields/mkto_si__CacheMinutesUntilExpired__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__CacheMinutesUntilExpired__c</fullName>
    <description>Number of minutes of inactivity before cache is no longer used and API calls are forced when user logs back in. For example, if this is set to 180 a user can log off and log back in within 2 hours and the cached data is accessed instead of direct API calls - assuming the cache is turned on with UseCache set to true. Assuming this time is outside the MinutesToRefreshCache value (5 minutes, etc.), the cache will refresh after:

1. User clicks on the main Marketo tab, displaying the dashboard
2. The individual asynchronous update processes finish their calls to the Marketo API and store their results into their respective cache objects (BestBetsCache, etc.)</description>
    <label>CacheMinutesUntilExpired</label>
    <length>3</length>
    <type>Text</type>
</CustomField>