force-app/main/default/objects/mkto_si__MarketoSettings__c/fields/mkto_si__MinutesToRefreshCache__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__MinutesToRefreshCache__c</fullName>
    <description>Number of minutes before an asynchronous request to refresh the cache is made.  The cache will refresh automatically and without impacting performance when:

1. User is viewing any tab in the main dashboard, from the main Marketo tab
2. The current time minus MinutesToRefreshCache is later than the last successful update for each cached object (best bets, watch list, lead feed, web activity, etc.)</description>
    <label>MinutesToRefreshCache</label>
    <length>3</length>
    <type>Text</type>
</CustomField>