force-app/main/default/objects/mkto_si__MarketoSettings__c/fields/mkto_si__MinutesToRefreshLeadFeed__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__MinutesToRefreshLeadFeed__c</fullName>
    <label>MinutesToRefreshLeadFeed</label>
    <length>3</length>
    <type>Text</type>
</CustomField>